crates/runie-tui/tests/snapshots/visual_snapshots__grok-full-mode-ansi-frames.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: "selected.join(\"\\n\")"
---
--- welcome (120x36) ---

   main ~/Code/GitHub/runie-tests/runie




                                              Clipboard may be unreachable.
                                           Run /doctor for details and fixes.

   ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
   │                                                                                                                │
   │  ⠀⠀⠀⠀⠀⠀⣀⣀⡀⠀⠀⠀⢀⠄   Grok Build Beta  0.2.118                                                                     │
   │  ⠀⠀⠀⣠⣾⠿⠛⠛⠛⠛⢀⡴⠁⠀                                                                                                │
   │  ⠀⠀⣼⡟⠁⠀⠀⠀⢀⡴⠻⣿⡀⠀   Workflows are here!                                                                          │
   │  ⠀⠀⣿⡇⠀⠀⠀⠔⠁⠀⠀⣿⡇⠀   Try them out using /workflows.                                                               │
   │  ⠀⠀⢹⣷⠀
--- ansi ---
[?25l[m[H[J[2;3H main[C~/Code/GitHub/runie-tests/runie[7;47HClipboard[Cmay[Cbe[Cunreachable.[8;44HRun[C/doctor[Cfor[Cdetails[Cand[Cfixes.[10;4H╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[11;4H│[112C│[12;4H│[2C⠀⠀⠀⠀⠀⠀⣀⣀⡀⠀⠀⠀⢀⠄[3C[1mGrok Build Beta  [m0.2.118[69C│[13;4H│[2C⠀⠀⠀⣠⣾⠿⠛⠛⠛⠛⢀⡴⠁⠀[96C│[14;4H│[2C⠀⠀⣼⡟⠁⠀⠀⠀⢀⡴⠻⣿⡀⠀[3C[1mWorkflows are here![74C[m│[15;4H│[2C⠀⠀⣿⡇⠀⠀⠀⠔⠁⠀⠀⣿⡇⠀[3CTry[Cthem[Cout[Cusing[C/workflows.[63C│[16;4H│[2C⠀⠀⢹⣷⠀
--- typed (120x36) ---

   main ~/Code/GitHub/runie-tests/runie




                                                                           
                                                                             

                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     






    ⠋ Starting session… 0.0s                                          

  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯ echo                                                                                                           │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────── Grok 4.5 (high) ─╯

  Enter:send  │  Shift+Tab:mode  │  Ctrl+x:shortcuts                                                                  
--- ansi ---
[?25h[m[H[J[2;3H main[C~/Code/GitHub/runie-tests/runie[7;47H         [C   [C  [C            [8;44H   [C       [C   [C       [C   [C      [10;4H                                                                                                                  [11;4H [112C [12;4H [2C              [3C                        [69C [13;4H [2C              [96C [14;4H [2C              [3C                   [74C [15;4H [2C              [3C   [C    [C   [C     [C           [63C [16;4H [2C              [96C [17;4H [2C              [3C            [73C      [2C [18;4H [2C              [3C              [71C      [2C [19;4H [19C         [84C [20;4H [19C    [81C      [2C [21;4H [112C [22;4H                                                                                                                  [29;3H  ⠋ Starting session… 0.0s                         [C         [C      [31;3H╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[32;3H│[C❯[Cecho[107C│[33;3H╰────────────────────────────────────────────────────────────────────────────────────────────────[CGrok[C4.5[C(high)[C─╯[35;3H[1mEnter[m:send  │  [1mShift+Tab[m:mode  │  [1mCtrl+x[m:shortcuts[58C        [32;11H
--- thinking (120x36) ---

   main ~/Code/GitHub/runie-tests/runie                                                                   6.4K / 500K

                                
     ❯ echo:q                                                                                                8:56 PM

                                                                           
  ┃  ◆ Thinking…                                                             
  ┃
  ┃  The user is                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     




                            

    ⠼ Thinking… 0.0s                                                                                1.3s ⇣6.39k [stop]

  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                                                │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────── Grok 4.5 (high) ─╯

  Shift+Tab:mode  │  Esc:cancel  │  Ctrl+x:shortcuts                                                                  
--- ansi ---
[?25h[m[H[J[2;3H main[C~/Code/GitHub/runie-tests/runie[67C6.4K[C/[C500K[4;6H [C                         [5;6H❯ echo:q[96C8:56[CPM[7;47H         [C   [C  [C            [8;3H┃[2C◆[C[1mThinking…[27C[m   [C       [C   [C       [C   [C      [9;3H┃[10;3H┃  The user is                                                                                                     [11;4H [112C [12;4H [2C              [3C                        [69C [13;4H [2C              [96C [14;4H [2C              [3C                   [74C [15;4H [2C              [3C   [C    [C   [C     [C           [63C [16;4H [2C              [96C [17;4H [2C              [3C            [73C      [2C [18;4H [2C              [3C              [71C      [2C [19;4H [19C         [84C [20;4H [19C    [81C      [2C [21;4H [112C [22;4H                                                                                                                  [27;5H [C        [C        [C    [29;3H  ⠼ Thinking… 0.0s                                 [C         [C      [30C1.3s[C⇣6.39k[C[stop][31;3H╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[32;3H│[C❯[C    [107C│[33;3H╰────────────────────────────────────────────────────────────────────────────────────────────────[CGrok[C4.5[C(high)[C─╯[35;3H[1mShift+Tab[m:mode  │  [1mEsc[m:cancel  │  [1mCtrl+x[m:shortcuts[58C        [32;7H
--- responding (120x36) ---

   main ~/Code/GitHub/runie-tests/runie                                                                   6.4K / 500K

                                
     ❯ echo:q                                                                                                8:56 PM

                                                                           
  ❙  ◆ Thought for 1.0s                                                      
   
     q                                                                                                       8:56 PM 
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     
                                                                                                                     




                            

    ⠸ Responding… 0.0s                                                                              2.3s ⇣6.39k [stop]

  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                                                │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────── Grok 4.5 (high) ─╯

  Shift+Tab:mode  │  Esc:cancel  │  Ctrl+x:shortcuts                                                                  
--- ansi ---
[?25h[m[H[J[2;3H main[C~/Code/GitHub/runie-tests/runie[67C6.4K[C/[C500K[4;6H [C                         [5;6H❯ echo:q[96C8:56[CPM[7;47H         [C   [C  [C            [8;3H❙[2C◆[C[1mThought[m for 1.0s[20C   [C       [C   [C       [C   [C      [9;3H [10;3H   q                                                                                                       8:56 PM [11;3H  [C          [C       [C  [C    [C    [C         [C [C        [C     [C  [C [C      [C       [C       [C    [C    [C    [10C [12;4H [2C              [3C                        [69C [13;4H [2C              [96C [14;4H [2C              [3C                   [74C [15;4H [2C              [3C   [C    [C   [C     [C           [63C [16;4H [2C              [96C [17;4H [2C              [3C            [73C      [2C [18;4H [2C              [3C              [71C      [2C [19;4H [19C         [84C [20;4H [19C    [81C      [2C [21;4H [112C [22;4H                                                                                                                  [27;5H [C        [C        [C    [29;3H  ⠸ Responding… 0.0s                               [C         [C      [30C2.3s[C⇣6.39k[C[stop][31;3H╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[32;3H│[C❯[C    [107C│[33;3H╰────────────────────────────────────────────────────────────────────────────────────────────────[CGrok[C4.5[C(high)[C─╯[35;3H[1mShift+Tab[m:mode  │  [1mEsc[m:cancel  │  [1mCtrl+x[m:shortcuts[58C        [32;7H
