crates/runie-tui/tests/snapshots/visual_snapshots__grok-full-mode-prompt-reference.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: summary
---
top_corner: true
prompt_cursor: true
bottom_corner: true
model_caption: false
send_hint: true
mode_hint: true
shortcut_hint: true
