crates/runie-tui/tests/snapshots/visual_snapshots__grok-rich-active-footer-row.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: footer
---
  Shift+Tab:mode  │  Esc:cancel  │  Ctrl+.:shortcuts
