crates/runie-tui/tests/snapshots/visual_snapshots__grok-rich-recorded-contracts.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: summary
---
welcome: true
markdown_heading: true
tool_progress: true
tool_reading: true
tool_glyph: true
spinner: true
prompt_cursor: true
markdown_bold: true
