crates/runie-tui/tests/snapshots/visual_snapshots__visual-error.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: screen
---
                                                                                
   main ~/Code/GitHub/runie-tests/runie                                        
                                                                                
     ◆ session_start                                                            
     ❯ fail                                                                     
                                                                                
     * error: provider unavailable                                              
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ ❯                                                                        │  
  ╰──────────────────────────────────────────────────────── Grok 4.5 (high) ─╯  
                                                                                
  Enter:send  │  Shift+Tab:mode  │  Ctrl+x:shortcuts
