crates/runie-tui/tests/snapshots/visual_snapshots__visual-reasoning.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
assertion_line: 1064
expression: screen
---
                                                                                
   main ~/Code/GitHub/runie-tests/runie                                        
                                                                                
     ◆ session_start  [hooks: 1]                                                
                                                                                
                                                                                
     ❯ explain                                                                  
       ◆ Thought for 0.9s                                                       
  ┃  The answer is ready.                                                       
       Worked for 0.0s                                                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ ❯ Type your message...                                                   │  
  ╰──────────────────────────────────────────────────────── Grok 4.5 (high) ─╯  
                                                                                
  Enter:send  │  Shift+Tab:mode  │  Ctrl+x:shortcuts
