crates/runie-tui/tests/snapshots/visual_snapshots__visual-resize.snap
---
source: crates/runie-tui/tests/visual_snapshots.rs
expression: screen
---
                                        
   main ~/Code/GitHub/runie-tests/run  
     ❯ resize                           
                                        
                                        
  ┃A response that wraps at the narrow  
  ╭──────────────────────────────────╮  
  │ ❯ Type your message...           │  
  ╰──────────────── Grok 4.5 (high) ─╯  
                                        
  Enter:send  │  Shift+Tab:mode  │  Ct
